# phosphor-bmc-code-mgmt

./: activation.cpp  activation.hpp  download_manager.cpp  download_manager.hpp  http-download  http-download.service.in  image_manager.cpp  images.hpp  inventory_main.cpp  inventory_manager.hpp  item_updater.cpp  item_updater.hpp  item_updater_main.cpp  meson.build  meson.options  meson_options.txt  scp-transfer  scp-transfer.service.in  software.conf  utils.cpp  utils.hpp  version.cpp  version.hpp  version_inv_entry.hpp  watch.cpp  watch.hpp  xyz.openbmc_project.Software.BMC.Inventory.service.in
nvidia-secure-update/: Makefile.am.include  ap_fw_activation.hpp  ap_fw_updater.cpp  ap_fw_updater.hpp  ap_fw_updater_main.cpp  flash.cpp  i2c.cpp  i2c.hpp  i2c_comm_lib.cpp  i2c_comm_lib.hpp  i2c_interface.hpp  item_updater_helper.cpp  meson.build  nvidia-boot-complete.service.in  nvidia-reboot.service.in  nvidia-secure-block-copy@.service.in  nvidia-secure-monitor.service.in  nvidia_ap_fw_updater.service.in  nvidia_boot_complete.cpp  nvidia_copy_image.cpp  nvidia_fw_services.cpp  obmc-secure-copy-image  obmc-secure-copy-image@.service.in  pris_ap_fw_state_machine.cpp  pris_ap_fw_state_machine.hpp  pris_state_machine.cpp  pris_state_machine.hpp  secure_monitor.cpp  state_machine.cpp  state_machine.hpp  state_machine_context.cpp  state_machine_context.hpp
oem/nvidia/: completeReset_utils.hpp  meson.build
static/: item_updater_helper.cpp
test/: inventory_test.cpp  utest.cpp
